# gstream_apriltag

./: CMakeLists.txt
inc/: projectConfig.h.in
src/: main.cpp
